12/06/12 Added channelmode +R to scarynet
12/04/20 Added country lookup for servers to support #46@magirc
11/04/22 r432 Added parameter support for !stats and !gstats
11/02/12 r423 Added support for accounts on Charybdis at burst
11/02/12 r421 Added support for accounts on Charybdis
11/02/11 r416 Added support for ircd-rizon

Changes
12/07/15 Added automode for logchan in bahamut
12/07/15 Adding automode for logchan in inspircd12.c (should fix #1418)
12/07/15 Don't init something to NULL after free if you gonna sstrdup something over it anyways.
12/07/15 More free/sstrdup usage / Cleaned up seen.c and made it ^M free
12/07/14 Revoked change to DenoraFree() and removed that macro entirely
12/07/09 Updated ScaryNet Protocol
12/07/06 Changed delete_user to properly and warning free cleanup the channels
12/07/05 Changed a lot of free()'s into DenoraFree() in order to prevent double free()'s
12/06/29 Undone a few changes as I might see issues
12/06/27 Commented out a little more at src/db.c
12/06/27 Bumped to 1.5.0-git-501
12/06/26 Use inet_ntop for decode_ip function
12/06/26 Reduced mysql_backup.c by 27%
12/04/25 Channel names no longer forced to lowercase (#1403)
12/04/24 Updated GeoIP databases
12/04/11 Added 'cron' function to denorarc for crontab usage 
12/04/11 Updated ScaryNet protocol
11/05/04 r435 Fixed formatting of docs/EVENTS
11/04/10 r428 documented the -protocoldebug option in the -help output
11/04/10 r428 made denora accept options that start with --
11/02/11 r419 Updated Denora icon
11/02/11 r416 Updated Windows installer

Fixes
12/07/15 xmlrpc didn't like free(av) which caused #1128
12/07/15 Fixed some memleaks in lastspoke.c and converted it to unix format
12/07/09 More warning fixes
12/07/08 Lots of changes in users.c/channels.c/ctcp.c
12/07/08 Fixed p10_gline to support 2.10.12's 6 arg gline format
12/07/02 Fixed Config not respecting DMEMORY settings, also did MYSQL the correct way now
12/07/02 Fixed debug output regarding nick changes